samples/_failures_safe/1761002546_e8e36f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_75687f82.c: In function ‘state_to_string’:
./samples/SAFE/__tmp_75687f82.c:145:5: error: expected expression at end of input
  145 |     static const char* names[] = {
      |     ^~~~~~
./samples/SAFE/__tmp_75687f82.c:145:5: error: expected declaration or statement at end of input
